# HPCC

./: .gitignore  TODO  cmake_tmp.txt  exc_cd_data.sh
analysis/: Makefile  test.cpp
simulation/: .lock-waf_linux2_build  .lock-waf_linux_build  CMakeLists.txt  configFile.cmake.template  exc_clear_config.sh  exc_configure.sh  exc_gdb_third.sh  exc_preliminary.sh  launch.py  make_third.sh  run.py  run_experiment.py  run_hybrid.py  run_rand_offset.py  run_rand_offset_test.py  third.sh  waf
simulation/buildsupport/: .cmake-format.txt  Config.cmake.in  config-store-config-template.h  core-config-template.h  macros_and_definitions.cmake  vcpkg_hunter.cmake  version-defines-template.h  wslv1_workaround.cc
simulation/buildsupport/custom_modules/: ns3_cmake_package.cmake  ns3_contributions.cmake  ns3_coverage.cmake  ns3_module_macros.cmake  ns3_store.cmake  ns3_versioning.cmake  waf_workaround_buildstatus.cmake  waf_workaround_c4cache.cmake  waf_workaround_lock.cmake
simulation/contrib/: wscript
simulation/examples/: CMakeLists.txt
simulation/examples/tutorial/: CMakeLists.txt
simulation/mix/: config.txt  config_doc.txt  fct_topology_flow_hpccPint95ai50log1.050p1.000.txt  flow.txt  mix_topology_flow_hpccPint95ai50log1.050p1.000.tr  qlen_topology_flow_hpccPint95ai50log1.050p1.000.txt
simulation/mix/rand_offset/: 2n1f_flow.txt  2n1f_topo.txt  2n2f_flow.txt  3n1f_flow.txt  3n1f_topo.txt  3n2f_flow.txt  config_fat_llmTest_dcqcn.txt  (+28 more)
simulation/scratch/: CMakeLists.txt  inverse.cpp  matrix.cpp  matrix.h  note.md  open_jackson_model.cpp  open_jackson_model.h  rand_offset_injector.cc  rand_offset_injector.h  test.cc  test_rand_offset.cc  third.cc  vector.cpp
simulation/scripts/: algo.py  blueprint_generator.py  calc_matrix.py  cmake_helper.py  gen_net.py  helper.py  run_exp_base.py  run_experiment.py  run_hybrid.py  snc_opt.py  test.ipynb
simulation/src/: CMakeLists.txt
simulation/src/stats/: CMakeLists.txt
simulation/src/test/: CMakeLists.txt
simulation/utils/: CMakeLists.txt
traffic_gen/: llm_train_cdf.txt  traffic_gen.py
(+705 files in other folders)
